--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:               The ICLR Blog Track
 tagline:             ''
 description:         'For short-term, peer-sourced tests of time, generalizations, specializations, reproductions, etc.!'
-# url:                 https://iclr-blog-track.github.io
-url:                 http://www.pavankantharaju.com/iclr-blog-track-camera.github.io/
+url:                 https://iclr-blog-track.github.io
+# url:                 http://www.pavankantharaju.com/iclr-blog-track-camera.github.io/
 baseurl:             ''
 paginate:            5
 permalink:           pretty
